# oasis-swarm

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  cloudbuild.yaml  docker-compose.yml  oasis_local.db  push_to_github.ps1  run_local.bat  run_local.ps1
.github/workflows/: ci.yml  deploy.yml
app-tier/: Dockerfile  gunicorn_conf.py  migration.sql  requirements.txt
app-tier/alembic/: env.py
app-tier/alembic/versions/: 41a897fc2034_initial_schema_migration.py
app-tier/src/: crud.py  db.py  main.py  models.py  qdrant.py  redis.py  security.py
app-tier/src/routes/: ai.py  contact.py  health.py  sync.py
app-tier/tests/: __init__.py  test_ai.py  test_api.py  test_cross_process_broadcast.py  test_security.py  test_sync.py  test_telemetry_processor.py
crypto-bot/: Dockerfile  bot.py  requirements.txt
crypto-bot/tests/: test_bot_logic.py
docs/: API.md  ARCHITECTURE.md  MODULES.md  OMNIVERSE_INTEGRATION.md  PRODUCTION_RUNBOOK.md
infra/: README.md  deploy.sh  ingest.py  monitoring-dashboard.json  qdrant-collections.sh  qdrant-startup.sh  redis-startup.sh  validate.sh  ws-proxy-service.yaml
infra/terraform/: main.tf
infra/ws-proxy/: Dockerfile  nginx-ws.conf
local-tooling/: load_test.py  stress_test.py  sync_viewer.py
mock-server/: mock_routes.py  server.py
nucleus-bridge/: Dockerfile  server.py
oasis-v5/: Dockerfile  jest.config.ts  jest.setup.ts  package-lock.json  package.json
rust-gateway/: Cargo.toml  Dockerfile
rust-gateway/src/: main.rs
scripts/: simulate_drone_swarm.py
tests/: load_test.py  test_mock_system.py
(+43 files in other folders)
