[package]
name = "rust-gateway"
version = "6.0.0"
edition = "2021"
authors = ["OASIS Swarm Engineering"]
description = "High-performance telemetry gateway for physical drone/robot ingestion."

[dependencies]
tokio = { version = "1.28", features = ["full"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
